2005-11-07  Sam Steingold  <sds@gnu.org>

	* socket.tst: added some batch tests
	* tests.lisp (run-all-tests) [CLISP & SOCKETS]: run "socket"

2005-10-29  Sam Steingold  <sds@gnu.org>

	* pack11.tst: test CONTINUEability of bad *PACKAGE* error

2005-10-21  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests): enable defhash tests unconditionally

2005-10-20  Sam Steingold  <sds@gnu.org>

	* defhash.tst: STRING-EQUAL is incompatible with SXHASH

2005-10-20  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests): use disable-risky instead of
	comments to disable bind/eval

2005-10-14  Sam Steingold  <sds@gnu.org>

	* listeners.lisp: do something extra while the system waits for input
	* clos.tst: load it

2005-10-06  Sam Steingold  <sds@gnu.org>

	* alltest.tst [clisp]: test module-info

2005-10-06  Sam Steingold  <sds@gnu.org>

	* streams.tst: test FILE-WRITE-DATE and FILE-LENGTH
	vs (DIRECTORY ... :FULL T)

2005-09-30  Sam Steingold  <sds@gnu.org>

	* ffi.tst (libc): removed variable, (:library :default) is always OK

2005-09-23  Sam Steingold  <sds@gnu.org>

	* hashtable.tst: added read/write consistency tests

2005-09-21  Sam Steingold  <sds@gnu.org>

	* lambda.tst: test (FUNCTION-LAMBDA-EXPRESSION #'(SETF FOO))

2005-09-21  Sam Steingold  <sds@gnu.org>

	* tests.lisp (do-test, do-errcheck): fixed format string

2005-09-21  Sam Steingold  <sds@gnu.org>

	* tests.lisp (type-error-handler): new function

2005-09-06  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: check that WRITE-TO-STRING binds variables for
	supplied keyword arguments
	remove global definitions at the end of file

2005-08-15  Sam Steingold  <sds@gnu.org>

	* path.tst: more feedback on failure

2005-08-15  Sam Steingold  <sds@gnu.org>

	* streams.tst: test (DESCRIBE NIL)

2005-08-10  Sam Steingold  <sds@gnu.org>

	* strings.tst: test EXT:STRING-INVERTCASE

2005-08-05  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test EXT:COMPILED-FILE-P

2005-08-03  Sam Steingold  <sds@gnu.org>
